kubernetes/01-deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: services
  name: game-service
  labels:
    app: game-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: game-service
  template:
    metadata:
      labels:
        app: game-service
    spec:
      containers:
        - name: game-service
          image: game-service:latest
          ports:
            - name: web
              containerPort: 8080
        - name: database
          image: postgres:13-alpine
          ports:
            - name: database
              containerPort: 5432
