kubernetes/02-service.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: services
  name: game-service
  labels:
    app: game-service
spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
  selector:
    app: game-service
