kubernetes/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-service
  namespace: services
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: cr
spec:
  ingressClassName: "traefik-external"
  rules:
    - host: test.rcomanne.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: game-service
                port:
                  name: web
